# showdown

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
app/: CMakeLists.txt
app/pico/: CMakeLists.txt  main.cpp  pin_assignments.h
app/pico/implementations/: button.h  lcd_screen.cpp  lcd_screen.h  pico_system.cpp  pico_system.h
app/pico/lcd/: ui_lcd.cpp  ui_lcd.h
app/pico/lcd/lib/Config/: CMakeLists.txt  DEV_Config.c
app/pico/lcd/lib/Fonts/: CMakeLists.txt
app/pico/lcd/lib/GUI/: CMakeLists.txt  GUI_Paint.c  GUI_Paint.h
app/pico/lcd/lib/LCD/: CMakeLists.txt  LCD_1in14.c
cmake/build-options/: linux.cmake  mac.cmake  pico.cmake
cmake/modules/: project-build-summary.cmake
cmake/toolchains/: linux-amd64.cmake
docker/: docker-compose.yml
docker/pico-gcc/: Dockerfile
hardware/: hardware.md
hardware/design/shot-detector/: fp-info-cache  fp-lib-table  shot-detector.kicad_pcb  shot-detector.kicad_prl  shot-detector.kicad_pro  shot-detector.kicad_sch  sym-lib-table
hardware/design/shot-detector/custom-project-lib.pretty/: 1x04_smt_wire_solder.kicad_mod  1x05_smt_wire_solder.kicad_mod  lm393-custom.kicad_sym
hardware/design/shot-detector/v1-fab-files/: shot-detector-B_Cu.gbr  shot-detector-B_Mask.gbr  shot-detector-B_Paste.gbr  (+9 more)
include/: CMakeLists.txt
include/showdown/: controller.h  event_receiver.h  factory.h  message.h  model_updated_receiver.h  screen.h  system.h  view_type.h
scripts/: load-app.bash  run-build-docker.bash
src/: CMakeLists.txt  ControllerImpl.cpp  ControllerImpl.h  controller_impl.cpp  controller_impl.h  factory.cpp  message.cpp
src/models/: session.cpp  session.h
src/views/: delta_table.cpp  delta_table.h  home.cpp  home.h  system_info.cpp  system_info.h  time_table.cpp  time_table.h  timeline.cpp  timeline.h  view.h
tests/: CMakeLists.txt
tests/perf/: CMakeLists.txt  controller_impl_perf.cpp  message_perf.cpp
tests/unit/: CMakeLists.txt  controller_impl_tests.cpp  message_tests.cpp  session_tests.cpp
